# CV_VideoClassification_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: README.md
data/: README.md  __init__.py
data/processed/: .gitignore
data/raw/: .gitignore  UCF50.dvc
data/scripts/: download.sh  unarchive.sh
deployment/: .gitignore  README.md  demo.py
deployment/models/VideoMAE/: model.safetensors  optimizer.pt  trainer_state.json
deployment/models/VideoMAE ORB/: model.safetensors  optimizer.pt  scheduler.pt  trainer_state.json
deployment/models/VideoMAE SIFT/: config.json  model.safetensors  optimizer.pt  rng_state.pth  trainer_state.json
models/: .gitignore  README.md
notebooks/: EDA.ipynb  EDA_ORB.ipynb  README.md  data.ipynb  data_loading_example.ipynb  ucf50-advanced-frame-selection-sift.ipynb  ucf50-orb-frame-selection.ipynb
notebooks/data/: EDA_SIFT.ipynb
notebooks/frame_selection/: ucf50-advanced-frame-selection-orb.ipynb
notebooks/models_experiments/: conv2plus1D.ipynb  ucf50-adaptiveFrameStep-conv2plus1d.ipynb  ucf50-adaptiveFrameStep-conv2plus1d_epoh20.ipynb  ucf50-adaptiveFrameStep-conv2plus1d_tuned.ipynb  ucf50-orb-videomae.ipynb  ucf50-sift-videomae.ipynb  ucf50-staticFrameStep-conv2plus1d.ipynb  ucf50-staticFrameStep-conv2plus1d_epoch20.ipynb  ucf50-staticFrameStep-conv2plus1d_poc.ipynb  ucf50-staticFrameStep-conv2plus1d_tuned.ipynb  ucf50-vanilla-videomae.ipynb  ucf50-vanilla-videomae_lora_poc.ipynb  videomae-base-finetuned-ucf50_train.ipynb
pipelines/: README.md
reports/: README.md
reports/plots/ucf50-orb-models-perfomance/videomae/: ucf50-orb-videomae-eval-loss.json  ucf50-orb-videomae-eval-recall.json  ucf50-orb-videomae-summary.csv
reports/plots/ucf50-orb/videomae/: ucf50-orb-videomae-eval-accuracy.json  ucf50-orb-videomae-eval-f1.json  ucf50-orb-videomae-eval-precision.json  (+3 more)
scripts/: README.md
services/: README.md
src/: README.md  data.py  dataset.py  labels.py
(+18 files in other folders)
