[tool.poetry]
name = "cv-videoclassification-project"
version = "0.1.0"
description = ""
authors = ["Ivan Golov <ivangolov@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
opencv-python = "^4.10.0.84"
tensorflow = "2.16.2"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
hydra-core = "^1.3.2"
torch = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
