[tool.poetry]
name = "cv-videoclassification-project"
version = "0.1.0"
description = ""
authors = ["Ivan Golov <ivangolov@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
hydra-core = "^1.3.2"
torch = "^2.5.0"
torchvision = "^0.20.0"
av = "11.0.0"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
