[tool.poetry]
name = "cv-videoclassification-project"
version = "0.1.0"
description = ""
authors = ["Ivan Golov <ivangolov@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
hydra-core = "^1.3.2"
av = "11.0.0"
ipykernel = "^6.29.5"
dvc = "^3.55.2"
torch = ">=2.2.2,<2.6.0"
torchvision = ">=0.17.2,<0.18.0"
numpy = "<2"
transformers = {extras = ["torch"], version = "^4.46.2"}
datasets = "^3.1.0"
pytorchvideo = "^0.1.5"
imageio = "^2.36.0"
evaluate = "^0.4.3"
scikit-learn = "^1.5.2"
clearml = "^1.16.5"
python-dotenv = "^1.0.1"
nbconvert = "^7.16.4"
peft = "^0.13.2"
torchinfo = "^1.8.0"
gradio = "^5.6.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
